--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Add your site or application content here -->
   <h1>bultaqi</h1>
-  <p>Hello world!</p>
+  <p>There was a man with story to tell...</p>
   <script src="js/vendor/modernizr-3.11.8.min.js"></script>
   <script src="js/app.js"></script>
 
