--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <!-- Add your site or application content here -->
   <h1>bultaqi</h1>
   <p>There was a man with story to tell...</p>
+  <h3>"Though one may conquer a thousand times a thousand men in battle, yet he indeed is the noblist victor who conquers himself." - The Buddha</h3>
   <script src="js/vendor/modernizr-3.11.8.min.js"></script>
   <script src="js/app.js"></script>
 
